TDD : Ajout et correction des tests des TUs pour vérifier dynamiquement le tri,ordre, la pagination et le filtrage des villes via /api/cities